# keyword_adress_filter

./: .gitignore  README.md  hello.py  pyproject.toml
src/adress_filter/: main.py  read_keyword.py  upadte_keyword_filter.py  update_by_text
